--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: "你来到了没有知识的荒原 :("
+description: "Wrong url, try again :("
 header-img: "img/bg/bg_404.jpg"
 permalink: /404.html
 ---
