--- a/about.html
+++ b/about.html
@@ -1,23 +1,16 @@
 ---
 layout: page
-title: "xs-huxblog"
-description: "专注IT，乐于分享"
-header-img: "img/bg/bg_about.jpg"
+title: "Tsinghua High-z Team"
+description: ""
+header-img: "img/bg/bg_cluster.jpg"
 ---
 
 <h2><strong>关于本站</strong></h2>
 
 <p>这是一个 Jekyll 的主题，用于搭建个人博客。</p>
 
-<p>本站使用 <a href="https://pages.github.com/">GitHub Pages</a> + <a href="http://jekyllrb.com/">Jekyll</a> 快速建 Blog 的技术方案。克隆了 <a href="http://huangxuan.me/">Hux</a> 的主题，在此深表感谢！</p>
+<p>This website has use <a href="https://pages.github.com/">GitHub Pages</a> + <a href="http://jekyllrb.com/">Jekyll</a> clone from <a href="http://huangxuan.me/">Hux</a> </p>
 
-<h2><strong>联系小昇</strong></h2>
-
-<blockquote>
-  <p>Email：jsksxs360@163.com</p>
-  
-  <p>QQ：2329133227</p>
-</blockquote>
 
 <!-- 来必力City版安装代码 -->
 {% if site.labili %}
