update about and contact

--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@ title: "about"
 description: "Tsinghua High-z Team"
 header-img: ""
 ---
+<h2><strong>About Tsinghua High-z Team</strong></h2>
 <div >
-    {% capture hzg_thu %}{% include about.md %}{% endcapture %}
-    {{ hzg_thu | markdownify }}
+    {% capture about %}{% include about.md %}{% endcapture %}
+    {{ about | markdownify }}
 </div>
