--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,9 @@ title: "Contacts"
 description: "Tsinghua High-z Team"
 header-img: ""
 ---
+
+<h2><strong>Contacts</strong></h2>
 <div >
-    {% capture hzg_thu %}{% include contact.md %}{% endcapture %}
-    {{ hzg_thu | markdownify }}
+    {% capture contacts %}{% include contact.md %}{% endcapture %}
+    {{ contacts | markdownify }}
 </div>
