--- a/about.html
+++ b/about.html
@@ -4,7 +4,18 @@ description: "Tsinghua High-z Team"
 header-img: ""
 ---
 <h2><strong>About Tsinghua High-z Team</strong></h2>
-<div >
-    {% capture about %}{% include about.md %}{% endcapture %}
-    {{ about | markdownify }}
+{% if site.labili %}
+<div id="lv-container" data-id="city" data-uid="{{ site.labili_uid }}">
+	<script type="text/javascript">
+   (function(d, s) {
+       var j, e = d.getElementsByTagName(s)[0];
+       if (typeof LivereTower === 'function') { return; }
+       j = d.createElement(s);
+       j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+       j.async = true;
+       e.parentNode.insertBefore(j, e);
+   })(document, 'script');
+	</script>
+<noscript> 为正常使用来必力评论功能请激活JavaScript</noscript>
 </div>
+{% endif %} 
